--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,24 +12,25 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
-      android:text="Đăng Nhập"
-      android:textColor="#fff"
-      android:textStyle="bold"
       android:layout_marginTop="80dp"
-      android:textSize="30dp" />
+      android:text="Đăng Nhập"
+      android:textColor="#EAF0FF"
+      android:textSize="30dp"
+      android:textStyle="bold" />
 
   <EditText
       android:id="@+id/txtUserEmail"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
       android:layout_below="@id/txtLogin"
+      android:layout_centerHorizontal="true"
       android:layout_marginHorizontal="62dp"
       android:layout_marginTop="24dp"
-      android:inputType="textEmailAddress"
       android:hint="Email"
-      android:textColorHint="@android:color/white"
-      android:textColor="#fff"/>
+      android:inputType="textEmailAddress"
+      android:minHeight="48dp"
+      android:textColor="#EAF0FF"
+      android:textColorHint="@android:color/white" />
 
   <EditText
       android:id="@+id/txtPassword"
@@ -37,25 +38,28 @@
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtUserEmail"
       android:layout_centerHorizontal="true"
-      android:layout_marginTop="24dp"
       android:layout_marginHorizontal="62dp"
-      android:inputType="textPassword"
+      android:layout_marginTop="24dp"
       android:hint="Password"
-      android:textColorHint="@android:color/white"
-      android:textColor="#fff" />
+      android:inputType="textPassword"
+      android:minHeight="48dp"
+      android:textColor="#EAF0FF"
+      android:textColorHint="@android:color/white" />
+
   <CheckBox
       android:id="@+id/chkRemember"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Nhớ tài khoản?"
-      android:textSize="18sp"
-      android:textColor="@android:color/white"
-      android:buttonTint="@android:color/white"
       android:layout_below="@id/txtPassword"
-      android:layout_centerHorizontal="true"
-      android:layout_toLeftOf="@id/btnGoogleLogin"
-      android:layout_marginTop="8dp"
-      />
+      android:layout_alignStart="@+id/txtPassword"
+
+      android:layout_marginStart="1dp"
+      android:layout_marginTop="13dp"
+      android:buttonTint="@android:color/white"
+      android:minHeight="48dp"
+      android:text="Nhớ tài khoản?"
+      android:textColor="#EAF0FF"
+      android:textSize="18sp" />
 
   <Button
       android:id="@+id/btnLogin"
@@ -64,71 +68,29 @@
       android:layout_below="@+id/chkRemember"
       android:layout_marginHorizontal="40dp"
       android:layout_marginTop="16dp"
-      android:textColor="#fff"
       android:background="@drawable/bubble"
-      android:text="Đăng nhập" />
+      android:text="Đăng nhập"
+      android:textColor="#fff" />
 
   <TextView
       android:id="@+id/txtForgotPassword"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:textColor="@android:color/white"
-      android:text="Quên mật khẩu"
-      android:textSize="18sp"
-      android:layout_marginTop="12dp"
+      android:layout_below="@id/btnLogin"
       android:layout_centerHorizontal="true"
-      android:layout_below="@id/btnLogin"/>
+      android:layout_marginTop="12dp"
+      android:text="Quên mật khẩu"
+      android:textColor="#EAF0FF"
+      android:textSize="18sp" />
+
   <TextView
       android:id="@+id/txtRegisterNow"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:textColor="#FFC107"
+      android:layout_below="@id/txtForgotPassword"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="12dp"
       android:text="Chưa có tài khoản? Hãy tạo một cái"
-      android:layout_marginTop="12dp"
-      android:textSize="18sp"
-      android:layout_centerHorizontal="true"
-      android:layout_below="@id/txtForgotPassword"/>
-
-
-  <Button
-      android:id="@+id/btnFacebookLogin"
-      android:layout_width="50dp"
-      android:layout_height="50dp"
-      android:layout_centerHorizontal="true"
-      android:layout_below="@id/txtRegisterNow"
-      android:layout_toLeftOf="@id/txtOr"
-      android:layout_marginRight="8dp"
-      android:background="@drawable/facebook" />
-
-
-  <Button
-      android:id="@+id/btnGoogleLogin"
-      android:layout_width="50dp"
-      android:layout_height="50dp"
-      android:layout_toRightOf="@id/txtOr"
-      android:layout_centerHorizontal="true"
-      android:layout_marginLeft="8dp"
-      android:layout_below="@id/txtRegisterNow"
-      android:background="@drawable/google" />
-
-  <TextView
-      android:id="@+id/txtOr"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
-      android:text="or"
-      android:textSize="18sp"
-      android:layout_marginTop="12dp"
-      android:layout_below="@id/txtRegisterNow"
-      android:textColor="#ffff" />
-
-  <ImageView
-      android:layout_width="250dp"
-      android:layout_height="250dp"
-      android:layout_below="@+id/txtOr"
-      android:layout_centerHorizontal="true"
-      android:layout_marginTop="16dp"
-      android:background="@drawable/dj" />
-
-
+      android:textColor="#FFC107"
+      android:textSize="18sp" />
 </RelativeLayout>
