--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -24,71 +24,66 @@
         android:id="@+id/txtUserDisplayName"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:inputType="text"
-        android:hint="Tên hiển thị"
-        android:textColorHint="@android:color/white"
         android:layout_below="@id/txtRegisterAccount"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:textColor="#fff"/>
+        android:hint="Tên hiển thị"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:textColor="#fff"
+        android:textColorHint="@android:color/white" />
+
     <EditText
         android:id="@+id/txtUserEmail"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/txtUserDisplayName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
-        android:layout_below="@+id/txtUserDisplayName"
-        android:inputType="text"
         android:hint="Email"
-        android:textColorHint="@android:color/white"
+        android:inputType="text"
+        android:minHeight="48dp"
         android:textColor="#fff"
-        />
+        android:textColorHint="@android:color/white" />
+
     <EditText
         android:id="@+id/txtUserPassword"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/txtUserEmail"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
-        android:layout_below="@+id/txtUserEmail"
-        android:inputType="textPassword"
         android:hint="Mật khẩu"
-        android:textColorHint="@android:color/white"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
         android:textColor="#fff"
-        />
+        android:textColorHint="@android:color/white" />
+
     <EditText
         android:id="@+id/txtUserReconfirmPassword"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/txtUserPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
-        android:layout_below="@+id/txtUserPassword"
-        android:inputType="textPassword"
         android:hint="Nhập lại mật khẩu"
-        android:textColorHint="@android:color/white"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
         android:textColor="#fff"
-        />
+        android:textColorHint="@android:color/white" />
+
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtUserReconfirmPassword"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="69dp"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
-        android:textColor="#fff"
         android:background="@drawable/bubble1"
-        android:text="Đăng kí" />
-
-    <ImageView
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_below="@+id/btnRegister"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/dj" />
+        android:text="Đăng kí"
+        android:textColor="#000000" />
 
 
 </RelativeLayout>
