--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -37,18 +37,20 @@
         android:layout_marginTop="16dp"
         android:lineHeight="28dp"
         android:textAlignment="center"/>
+
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="290dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/txtThongBao"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="52dp"
-        android:layout_below="@+id/txtThongBao"
-        android:inputType="textEmailAddress"
+        android:backgroundTint="@android:color/white"
         android:hint="Email"
-        android:textColorHint="@android:color/white"
+        android:inputType="textEmailAddress"
+        android:minHeight="48dp"
         android:textColor="#fff"
-        android:backgroundTint="@android:color/white" />
+        android:textColorHint="@android:color/white" />
     <Button
         android:id="@+id/btnLayLaiMatKhau"
         android:layout_width="280dp"
@@ -61,11 +63,4 @@
         android:text="Xác Nhận"
         android:textSize="24sp"
         android:textAllCaps="false"/>
-    <ImageView
-        android:layout_width="284dp"
-        android:layout_height="250dp"
-        android:layout_below="@+id/btnLayLaiMatKhau"
-        android:layout_marginTop="32dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/dj" />
 </RelativeLayout>
