--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -74,13 +74,13 @@
 
     <Button
         android:id="@+id/btnRegister"
-        android:layout_width="280dp"
+        android:layout_width="263dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtUserReconfirmPassword"
-        android:layout_alignParentStart="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="57dp"
         android:background="@drawable/bubble1"
         android:text="Đăng kí"
         android:textColor="#000000" />
